syntax = "proto3";

package kzmake.rca.user.v1;

service UserService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Rename(RenameRequest) returns (RenameResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
  string name = 1;
}

message CreateResponse {
  User user = 1;
}

message ListRequest {
}

message ListResponse {
  repeated User users = 1;
}

message GetRequest {
  string user_id = 1;
}

message GetResponse {
  User user = 1;
}

message RenameRequest {
  string user_id = 1;
  string name = 2;
}

message RenameResponse {
  User user = 1;
}

message DeleteRequest {
  string user_id = 1;
}

message DeleteResponse {
}


message User {
  string id = 1;
  string name = 2;
}
